--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 streamlit
 streamlit-echarts
-pandas
-numpy
-pydeck
-time
-random
-SessionState
-Pillow
+# pandas
+# numpy
+# pydeck
+# time
+# random
+# SessionState
+# Pillow
